--- a/index.html
+++ b/index.html
@@ -417,6 +417,6 @@ end 31, 6
          <p>Start of the maze not specified, refer to <a href="#" onclick="this.parentElement.parentElement.classList.add('hidden');document.getElementById('helpButton').click()">file format guide</a></p>
      </div>
 
-<script src="bfs.js"></script>
+<script src="dfs.js"></script>
 </body>
 </html>
