Fix English errors & whitespace

--- a/index.html
+++ b/index.html
@@ -371,10 +371,10 @@
         <ul>
             <li>The maze is a rectangle (<u>meaning all lines have the same length</u>) enclosed by a wall on all 4 sides</li>
             <li>For walls, use the <code class="inlineCode">X</code> character</li>
-            <li>For freely navigatable fields use spaces</li>
+            <li>For freely navigable fields use spaces</li>
             <li>Each line is a row of the maze</li>
             <li>So, newlines (Enter) form separate rows </li>
-            <li>After you've specified the maze, specify the start and end fields, in the following format:
+            <li>After you've specified the maze, specify the start and end fields in the following format:
                 <ul>
                 <li><code class="inlineCode">start [column], [row]</code></li>
                 <li><code class="inlineCode">end [column], [row]</code></li>
